--- a/JSON3/index.html
+++ b/JSON3/index.html
@@ -10,8 +10,8 @@
 	</head>
 
 	<body>
-
-		<div class="winkelwagen"><span class="winkelwagen__aantal"></span></div>
+		
+		<a href="winkelwagen.html"><div class="winkelwagen"><span class="winkelwagen__aantal"></span></div></a>
 
 		<h1>Een selectie van boeken.</h1>
 
